# Simple-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mnist_mock_test.csv  mnist_mock_train.csv  python_check.py
includes/: Model_IO.cpp  Model_IO.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Stats.hpp
model_params/: model_W1.csv  model_W2.csv  model_b1.csv  model_b2.csv
